--- a/CLA_mastery/review.tex
+++ b/CLA_mastery/review.tex
@@ -338,7 +338,7 @@ with the $r_\xi$ known parameters of the problem. For this class of problem we i
 For any $A \in \bC^{m\times n}$,
 
 \begin{equation}
-    \norm{A}_2 = \sqrt{\norm{A}_\infty\norm{A}_1}.
+    \norm{A}_2 \leq \sqrt{\norm{A}_\infty\norm{A}_1}.
 \end{equation}
 
 Moreover, since $\norm{\cdot}_2$ is induced by the 2-norm on $\bC^n$ it is submultiplicative. Note first of all that given the structure of $H$ and $S$, we have
