--- a/ComplexProject/Prj.tex
+++ b/ComplexProject/Prj.tex
@@ -191,7 +191,7 @@ a_{n} && \ldots && a_{2} && a_1 && a_0
 
 A principle minor of $A$ is the determinant of $A$ after the $k$-th row and column have been removed for $k \in I \subseteq \mathcal{P}\left(\{1, \ldots, n\} \right)$.
 
-With these assumptions on $A$, there exists a $\Theta(n^2)$ algorithm for inversion due to Trench (1964) \autocite{Trench}. In fact while Trench stated the result for non-Hermitian matricies, he proved the correctness of the algorithm for $A$ toeplitz, Hermitian, and postive definite; however in the 1968 paper \textit{'Toeplitz Matrix Inversion: The Algorithm of W. F. Trench'} Shalhav Zohar proves the validity of the algorithm for a non-Hermitian matrix and relaxes the positive definite condition to that of non-singular principle minors. \autocite{Zohar} We begin with a brief outline of the algorithm as described by Zohar's (borrowing his notation), but for a detailed proof of it's validity or relationship to the toeplitz structure of $A$ see the original paper.
+With these assumptions on $A$, there exists a $\Theta(n^2)$ algorithm for inversion due to Trench (1964) \autocite{Trench}. In fact while Trench stated the result for non-Hermitian matricies, he proved the correctness of the algorithm for $A$ toeplitz, Hermitian, and postive definite; however in the 1968 paper \textit{'Toeplitz Matrix Inversion: The Algorithm of W. F. Trench'} Shalhav Zohar proves the validity of the algorithm for a non-Hermitian matrix and relaxes the positive definite condition to that of non-singular principle minors. \autocite{Zohar} We begin with a brief outline of the algorithm as described by Zohar's (borrowing his notation), but for a detailed proof of its validity or relationship to the toeplitz structure of $A$ see the original paper.
 
 \textbf{The Trench Algorithm}
 We denote the transpose of a column vector $b$ by $\tilde{b}$ and we write $\hat{b}_i = b_{n-i}$ where $n$ is the dimension of $b$. The problem is of inverting $L_{n+1}$ toeplitz
